Switched URL encoding